added json hockey file, edited css for cards and fixed client.js

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -77,10 +77,10 @@
         </figure>
       </div>
       <nav id="navbar2">
-        <button>Sports</button>
-        <button>Scores</button>
-        <button>News</button>
-        <button>Calendar</button>
+        <button class="nav2btn" id="nav2-btn1">Sports</button>
+        <button class="nav2btn" id="nav2-btn2">Scores</button>
+        <button class="nav2btn" id="nav2-btn3">News</button>
+        <button class="nav2btn" id="nav2-btn4">Calendar</button>
       </nav>
       <div id="subscribe-form">
         <img id="mail-icon" alt="mail-icon" src="/img/mail.png" />
@@ -93,68 +93,9 @@
           <button id="subscribe-button">Subscribe</button>
         </div>
       </div>
-      <div id="articles">
-        <div id="article1">
-          <figure>
-            <img alt="tom-brady" src="/img/tom-brady.png" />
-          </figure>
-          <a href="https://www.youtube.com/watch?v=7KjTLUeHpQw">
-            Check out Tom Brady career highlights
-          </a>
-          <p>
-            It's common knowledge that Tom Brady is the NFL GOAT (greatest of
-            all times), so checkout some of his career highlights.
-          </p>
-          <p class="date-posted">Oct 8th, 2024</p>
-        </div>
-        <div id="article2">
-          <figure>
-            <img alt="counterstrike2-logo" src="/img/counterstrike2.jpg" />
-          </figure>
-          <a href="https://escharts.com/tournaments/csgo">
-            Starting a career as CS2 pro?
-          </a>
-          <p>
-            Many people nowadays play professional level of CS2 but they just
-            can't find the proper tournaments to play and earn some cash. This
-            website might help with that.
-          </p>
-          <p class="date-posted">Oct 7th, 2024</p>
-        </div>
-        <div id="article3">
-          <figure>
-            <img alt="canucks" src="/img/canucks.jpg" />
-          </figure>
-          <a
-            href="https://www.sportsnet.ca/nhl/article/canucks-sign-forward-nils-hoglander-to-three-year-extension/"
-          >
-            Canucks sign forward Nils Hoglander to three-year extension
-          </a>
-          <p>
-            The Canucks signed the forward to a three-year, $9 million
-            extension, the team announced Sunday. The deal will carry an AAV of
-            $3 million.
-          </p>
-          <p class="date-posted">Oct 6th, 2024</p>
-        </div>
-        <div id="article4">
-          <figure>
-            <img alt="lebron-and-son" src="/img/lebron.jpg" />
-          </figure>
-          <a
-            href="https://www.nbcsports.com/nba/news/warriors-reportedly-considered-drafting-bronny-james-at-no-52-passed-out-of-respect-to-lebron"
-          >
-            Warriors considered drafting Bronny James, passed out of respect to
-            LeBron
-          </a>
-          <p>
-            Rich Paul was doing what agents do, trying to steer his client where
-            he wanted to go with the Lakers, and reportedly had been telling
-            other teams, “If you draft him, he’ll play in Australia rather than
-            for you.”
-          </p>
-          <p class="date-posted">Oct 5th, 2024</p>
-        </div>
+      <div id="tournament-details">
+        <div id="scores-container"></div>
+        <div id="standings-container"><h2>Standings</h2></div>
       </div>
       <footer id="footer">
         <div id="footer-info">
