made scoreboard working and displaying scores to the chosen sport from navbar2

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -69,18 +69,24 @@
         <figure id="banner-fig">
           <img alt="news-banner img" src="/img/botafogo.jpg" />
           <figcaption id="banner-figcap">
-            <p id="b-figcap1">Missed latest news?</p>
+            <p id="b-figcap1">Missed latest scores?</p>
             <p id="b-figcap2">
-              Check out our news section to keep up with your favorite sport
+              Check out the scores section below to keep up with your favorite
+              sport
             </p>
           </figcaption>
         </figure>
       </div>
       <nav id="navbar2">
-        <button class="nav2btn" id="nav2-btn1">Sports</button>
-        <button class="nav2btn" id="nav2-btn2">Scores</button>
-        <button class="nav2btn" id="nav2-btn3">News</button>
-        <button class="nav2btn" id="nav2-btn4">Calendar</button>
+        <input type="button" class="nav2btn" id="soccer" value="Soccer" />
+        <input type="button" class="nav2btn" id="hockey" value="Hockey" />
+        <input type="button" class="nav2btn" id="football" value="Football" />
+        <input
+          type="button"
+          class="nav2btn"
+          id="basketball"
+          value="Basketball"
+        />
       </nav>
       <div id="subscribe-form">
         <img id="mail-icon" alt="mail-icon" src="/img/mail.png" />
