got the banners to change when the sport changes

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -66,16 +66,7 @@
         </section>
       </aside>
       <div id="banner">
-        <figure id="banner-fig">
-          <img alt="news-banner img" src="/img/botafogo.jpg" />
-          <figcaption id="banner-figcap">
-            <p id="b-figcap1">Missed latest scores?</p>
-            <p id="b-figcap2">
-              Check out the scores section below to keep up with your favorite
-              sport
-            </p>
-          </figcaption>
-        </figure>
+        <figure id="banner-fig"></figure>
       </div>
       <nav id="navbar2">
         <input type="button" class="nav2btn" id="soccer" value="Soccer" />
